game/public/css/style.css
/* Reset CSS */
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

/* Grid takes remaining space */
#page_content {
    height: calc(100vh - 1rem - 20px);
    width: 100vw;

    display: grid;
    grid-template-columns:
        1fr
        min(100%, calc(100vh - 1rem - 100px))
        1fr;
    grid-template-rows: 40px auto 0px;

    padding: 10px;
    background-color: #87CFCC;
}

/* Grid items */
#page_content>div {
    background: #60435F;
    border-radius: 20px;
    box-shadow: #333333 0px 4px 8px;

    display: flex;
    justify-content: center;
    align-items: center;

    font-size: 12px;
}



/* Game inside of page */
#gameWrapper {
    /* grid-area: row-start / column-start / row-end / column-end */
    grid-area: 2 / 2 / 3 / 3;

    aspect-ratio: 1 / 1;

    justify-self: center;
    align-self: center;

    width: 100%;
    /*max-width: min(100%, 100vh - 1rem - 100px);*/
}

#gameBoard {
    width: 100%;
    height: 100%;
    display: grid;
}

#page_content>#area1 {
    /* grid-area: row-start / column-start / row-end / column-end */
    grid-area: 1 / 2 / 2 / 3;
    height: 100%;
    width: 100%;
    border-radius: 80px;
}

